# boardgame-ai

./: .gitignore  BOARDGAME_AI_ROADMAP.md  WORKFLOW.md  async_log.txt  benchmark_workers.py  diag_log.txt  elo_db.json  elo_db_80x6.json  elo_games.jsonl  elo_games_80x6.jsonl  fix_b_log.txt  gpw3_log.txt  requirements.txt  run_reply_pilot_training_cloud.sh  sanity_gpw1_log.txt  sanity_log.txt  setup_cloud.sh  setup_cloud_7wd.sh  setup_reply_pilot_cloud.sh  sweep_results.csv  sync_log.txt  test_parallel_gen.py  training_log_1782573599.jsonl  training_log_1782573626.jsonl  training_log_1782573832.jsonl  workers12_log.txt  workers16_log.txt
extension/: Instructions.txt  background.js  content.js  manifest.json  popup.html  popup.js
extension_kingdomino/: README.md  background.js  content.js  manifest.firefox..json  manifest.json  placement_mapping.js  popup.html  popup.js
games/: AGENTS.md  test_az_loop.py  test_az_loop_controller.py  test_run_log.py
games/kingdomino/kingdomino_rust/: Cargo.toml  pyproject.toml
games/kingdomino/kingdomino_rust/src/: deck0_draft_dp.rs  denial_tree.rs  lib.rs  nnue_features.rs  search.rs  sparse_nnue.rs
games/seven_wonders_duel/seven_wonders_rust/: .gitignore  Cargo.toml  export_rust_data.py  pyproject.toml
games/seven_wonders_duel/seven_wonders_rust/src/: bots.rs  chance.rs  codec.rs  data.rs  data_gen.rs  encoder.rs  engine.rs  eval.rs  lib.rs  pool.rs  rng.rs  rules.rs  self_play.rs  state.rs  tree.rs  tree_resumable.rs
scripts/: audit_kingdomino_advisor_position.py  build_eval_suite.py  promote_checkpoint.py  run_eval_suite.py  (+7 more)
(+427 files in other folders)
