[package]
name = "kingdomino_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "kingdomino_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
numpy = "0.28"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
