[package]
name = "seven_wonders_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "seven_wonders_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }

# Phase F1 is engine-only: no numpy/rayon/rand yet. The batched-inference and
# Gumbel searcher dependencies arrive with F3/F4. Keeping the dependency set
# minimal keeps the F1 build fast while the engine is iterated against the
# byte-exact replay gate.

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
